--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 *.flac
 *.wav
 
-# ignore all image files
-*.png
-*.jpg
+# ignore uncontrolled all image files
+ImageUncontrolled/*
 
 # ignore all font files
 *.ttf
