Divided images to controlled and uncontrolled. Changed .gitignore to ignore the ImageUncontrolled directory

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 *.flac
 *.wav
 
+#temp vim files
+*~
+
 # ignore uncontrolled all image files
-*/Uncontrolled/*
+#*/Uncontrolled/*
 
 # ignore all font files
 *.ttf
