To remove something (in this case the out directory) in git that has been added to .gitignore, first it needs to be removed from .gitignore, then deleted, then pushed, then added back to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,9 @@
 #temp vim files
 *~
 
-# ignore uncontrolled all image files
+# ignore all files in uncontrolled (images, fonts, docs, notes help, .... anything wanted only locally)
 Uncontrolled/*
 */Uncontrolled/*
-
-# ignore all font files
-*.ttf
-*.otf
 
 # ignore all text files
 *.txt
